<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kırmancki Learning Guide</string>
    <string name="url_for_words">http://192.168.13.191:8810/HAlarm.zip/words_json.json</string>
    <string name="url_for_categoryies">http://192.168.13.191:8810/HAlarm.zip/categories_json.json</string>
    <string name="settings_app_name">Settings</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update">Check update</string>
    <string name="menu_about">About</string>
    <string name="lbl_category">Categories</string>
    <string name="msg_wait">Dictionary DB is being created for the first time usage. Please wait .....</string>
    <string name="msg_count">Total uploaded records:</string>
    <string name="msg_ctgry">Nothing found for this category....</string>
    <string name="msg_firstsetup">You see this screen as it is first time you are installing the application or data needs for the application has been removed. Guide database is being created. This process may take some time. For the next run, program will skip this screen faster and you will not see it. Please do not close the app until this process is completed.</string>
    <string name="msg_dil1">Native language: Kırmancki, Learning language: Türkçe</string>
    <string name="msg_dil2">Native language: Türkçe, Learning language: Kırmancki</string>
    <string name="url_category">http://192.168.13.191:8810/HAlarm.zip/categories_json.json</string>
    <string name="url_words">http://192.168.13.191:8810/HAlarm.zip/words_json.json</string>
    <string name="msg_yazan">Author: Hıdır Aygül</string>
    <string name="msg_email">email: aygulh@gmail.com</string>
    <string name="msg_help">Help</string>
    <string name="msg_helptext">To get updates from remote server, use menu option \"Check update\". \n \n \"Settings\" menu helps you to switch between native and learning languages. It helps you to select which language you want to practice. For example if you want to learn Kırmancki, you may un-check the check-box in settings screen. So everything will be shown in Turkish and you will try to find the Kırmancki equivalent of it.</string>
    <string name="btn_close">Close</string>
    <string name="msg_alerttitle">Quiting Application..</string>
    <string name="msg_alertmessage">Are you sure you want to exit? DB creation has not been done yet. Application may not work correctly.</string>
    <string name="msg_alertyes">Yes</string>
    <string name="msg_alertno">No</string>
    <string name="msg_serverstart">Retriving data from server... \n \n </string>
    <string name="msg_serverend">Update completed...</string>
    <string name="msg_words">Retreiving dictionary records ... \n \n </string>
    <string name="msg_category">Retreiving categories ...\n </string>
    <string name="menu_search">Search</string>
    <string name="btn_quiz">quiz</string>
    <string name="btn_help">pronunciation</string>
    <string name="msg_chosecategory">Select Category:</string>
    <string name="msg_correct">Correct : %s</string>
    <string name="msg_wrong">Wrong : %s </string>
    <string name="msg_totalq">Total question: </string>
    <string name="msg_toast">Wrong answer !!!</string>
    <string name="msg_generalsettings">General Language Settings</string>
    <string name="msg_nativelang">Native Language - Kırmancki</string>
    <string name="msg_summary">If checked, records will be shown in Kırmancki, you will learn Turkish equivalent. For opposite, leave the box un-checked.</string>
    <string name="msg_guideheader">Kırmancki (Zazaca) yazım ve yazılanı okuma ile ilgili çeşitli alfabe çalışmaları internette bulunabilir. Burada mümkün olduğunca standart yaygın klavyelerde kullanılan karakterler kullanılarak sesler tanımlanmaya çalışılmıştır. \n \nDilimizde kullandığımız pek çok sesin bu standart harflerle anlatmanın kolay olmayacağı da açıktır. Yine de bu seslerin bir kısmını anlatabilmek için tek harf (Q, W, X vs gibi), bazıları için ise birden fazla standart harf (Ch, Ph, Çh vs gibi) birarada kullanılarak tanımlanmaya çalışılacaktır. \n \nBu bölümde bunlarla ilgili örnekler verilerek uygulama içerisindeki kelime, deyim ve sözlerin istenen biçimde okunmasına yardımcı olmaya çalışacağız.</string>
</resources>
