<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4">

    <TextView
        android:text="@string/msg_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="Versiyon : 1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/textView7" />

    <Button
        android:text="@string/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:id="@+id/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:text="@string/msg_helptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginRight="20dp" />

    <TextView
        android:text="@string/msg_yazan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/msg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="normal|italic"
        android:layout_marginBottom="36dp"
        android:layout_above="@+id/btnClose"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

</RelativeLayout>
